Fix checkbox color for dark mode

--- a/profiles/parallel/resources/css/custom-theme.css
+++ b/profiles/parallel/resources/css/custom-theme.css
@@ -4,6 +4,7 @@ body {
     --pb-view-max-width: 46rem;
     --pb-color-primary: var(--pico-color);
     --paper-checkbox-label-color: var(--pico-color);
+    --primary-text-color: var(--pico-color);
     background-color: var(--pico-background-color);
     min-height: 100vh;
 }
